Fix spacing of form elements

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -43,10 +43,12 @@ form {
   background-color: lightblue;
   padding: 1em;
   margin-bottom: 1em;
-  input {
-    margin-bottom: 1em;
+  input, select {
+    margin: 0 auto 1em;
+    display: block;
   }
   label {
+    text-align: center;
     display: block;
     clear: left;
   }
